--- a/Append_Студента.ui
+++ b/Append_Студента.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <class>dialog</class>
+ <widget class="QDialog" name="dialog">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Добавление и редактирование</string>
   </property>
   <widget class="QFrame" name="frame_2">
    <property name="geometry">
@@ -38,7 +38,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>пп</string>
+     <string/>
     </property>
    </widget>
    <widget class="QLineEdit" name="lineEdit_5">
