--- a/delition.ui
+++ b/delition.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Удаление</string>
   </property>
   <widget class="QFrame" name="frame_2">
    <property name="geometry">
