--- a/student.ui
+++ b/student.ui
@@ -26,7 +26,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Список студентов</string>
+   <string>Список товаров</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <property name="minimumSize">
